# PyFlex

./: .gitignore  README.md
demo/: helpers.h  main.cpp  main_python.cpp
demo/opengl/: shadersGL.cpp
pyflex/: CMakeLists.txt  README.md  setup.py
pyflex/py_files/: test.py
pyflex/src/: body.cpp  demo.h  flex.cpp  main.cpp  main.h  pyflex.cpp
